Fix titles overflow

--- a/styles/title.scss
+++ b/styles/title.scss
@@ -14,7 +14,6 @@
       position: relative;
       display: flex;
       align-items: center;
-      height: 50px;
 
       .block {
         width: 0%;
